{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 11,
  "lineage": "ebfc39f4-a142-7e72-2320-997b337764d5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:vpc/vpc-0d9e4851f5a278ab7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00d8d0718f7f0151e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03adf3e68c103565e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9e4851f5a278ab7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0212ef3b9bd5972ae",
            "owner_id": "947288527346",
            "region": "ap-southeast-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020728ad6199d7fa0",
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:instance/i-0936b9beb7b80df33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0936b9beb7b80df33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-os-brick-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09e7be41951b147dd"
              }
            ],
            "primary_network_interface_id": "eni-09e7be41951b147dd",
            "private_dns": "ip-172-31-11-140.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.140",
            "public_dns": "ec2-54-252-132-16.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.132.16",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0385a0efeeaae10fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-os-brick-ubuntu-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070707d1c6641111f",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e668a6c3db19410f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "i-0936b9beb7b80df33",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.ubuntu",
            "aws_security_group.ubuntu_ec2",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020728ad6199d7fa0",
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:instance/i-09d6724e6810d4c38",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d6724e6810d4c38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-os-brick-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e34ac54e0288459b"
              }
            ],
            "primary_network_interface_id": "eni-0e34ac54e0288459b",
            "private_dns": "ip-172-31-37-225.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.225",
            "public_dns": "ec2-3-26-216-89.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.216.89",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bbd524e0f79ae1aa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-os-brick-ubuntu-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0428f8e7ab42b4df8",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e668a6c3db19410f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "i-09d6724e6810d4c38",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.ubuntu",
            "aws_security_group.ubuntu_ec2",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020728ad6199d7fa0",
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:instance/i-0561fde65b32bcf22",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0561fde65b32bcf22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-os-brick-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009b539d8136ea82e"
              }
            ],
            "primary_network_interface_id": "eni-009b539d8136ea82e",
            "private_dns": "ip-172-31-28-228.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.228",
            "public_dns": "ec2-16-176-28-2.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "16.176.28.2",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0937a88ca7a51d3b9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-os-brick-ubuntu-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb35bd63c7641fda",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e668a6c3db19410f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "i-0561fde65b32bcf22",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.ubuntu",
            "aws_security_group.ubuntu_ec2",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:security-group/sg-0e668a6c3db19410f",
            "description": "Allow SSH access to Ubuntu EC2 instances",
            "egress": [],
            "id": "sg-0e668a6c3db19410f",
            "ingress": [],
            "name": "terraform-os-brick-ubuntu-ec2-sg",
            "name_prefix": "",
            "owner_id": "947288527346",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-os-brick-ubuntu-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e4851f5a278ab7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "sg-0e668a6c3db19410f",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:security-group-rule/sgr-00cc063e0fbe4eef8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00cc063e0fbe4eef8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-2",
            "security_group_id": "sg-0e668a6c3db19410f",
            "security_group_rule_id": "sgr-00cc063e0fbe4eef8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "sgr-00cc063e0fbe4eef8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.ubuntu_ec2",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:947288527346:security-group-rule/sgr-0d78c4ac1678e139c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d78c4ac1678e139c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-2",
            "security_group_id": "sg-0e668a6c3db19410f",
            "security_group_rule_id": "sgr-0d78c4ac1678e139c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "947288527346",
            "id": "sgr-0d78c4ac1678e139c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.ubuntu_ec2",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}